src/components/testimonials/Testimonials.scss
.testimonials {
  padding: 9.6rem;
  background: #1b0000;
  color: #fff;

  display: grid;
  grid-template-columns: 2fr 3fr;

  &__heading {
    color: #fa5252;
    font-weight: 700;
    font-size: 5.6rem;
    line-height: 1.1;
  }

  &__stars {
    display: flex;
    align-items: center;
    gap: 1.6rem;
    margin-bottom: 4.8rem;
    img {
      height: 5.6rem;
    }
  }
}

.testimonial {
  &__img {
    height: 6.4rem;
    border-radius: 50%;
    margin-bottom: 1.2rem;
  }

  &__text {
    font-size: 1.8rem;
    line-height: 1.8;
    margin-bottom: 1.6rem;
  }

  &__name {
    font-size: 1.6rem;
    color: #fa5252;
  }
}

